--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,7 @@ body {
 .movie-card img {
     width: 100%;
     height: 280px;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .movie-card h3 {
