--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
     <nav class="navbar">
-        <h1 class="logo">ttma-MovieSite</h1>
+        <h1 class="logo">TTMA-MovieSite</h1>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
             <li><a href="all/all.html">All movies</a></li>
