--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -4,7 +4,7 @@
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
             <li><a href="all/all.html">All movies</a></li>
-            <li><a href="vj/vj.html">Contact</a></li>
+            <li><a href="clear/clear.html">Clear Copies</a></li>
         </ul>
     </nav>
 </header>
