--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -6,7 +6,7 @@
             <li><a href="all/all.html">All movies</a></li>
             <li><a href="clear/clear.html">Clear Copies</a></li>
             <li><a href="login/login.html" id="loginLink">Login</a></li>
-            <li><a href="register/register.html" id="registerLink">Register</a></li>
+            <li><a href="login/register.html" id="registerLink">Register</a></li>
             <li><a href="logout/logout.html" id="logoutLink" style="display: none;">Logout</a></li>
         </ul>
     </nav>
