--- a/src/css/auth.css
+++ b/src/css/auth.css
@@ -109,12 +109,13 @@ a:hover {
 
 /* Responsive */
 
-@media (max-width: 480px) {
+
+/*@media (max-width: 480px) {
     form {
         padding: 1.5rem;
-        max-width: 320px;
+        max-width: 450px;
     }
     form h1 {
         font-size: 1.5rem;
     }
-}
+}*/
